# Conjunct

./: .gitignore  README.md  go.mod  go.sum  magefile.go  main.go
argsparser/: argsparser.go  argsparser_test.go
config/: config.go  config_test.go
core/: core.go  core_test.go
sourcefile/: sourcefile.go
testassets/android/ConjunctDemo/: conjunct-config-path.yaml  conjunct-config.yaml  gradle.properties  native-lib.cpp.bc.anal  native-lib.cpp.opt.bc.anal  settings.gradle
testassets/android/ConjunctDemo/app/: build.gradle
testassets/android/ConjunctDemo/app/src/androidTest/java/com/afjoseph/conjunctdemo/: ExampleInstrumentedTest.java
testassets/android/ConjunctDemo/app/src/main/: AndroidManifest.xml
testassets/android/ConjunctDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
testassets/android/ConjunctDemo/app/src/main/java/com/afjoseph/conjunctdemo/: MainActivity.java
testassets/android/ConjunctDemo/app/src/main/res/values/: strings.xml  themes.xml
testassets/android/ConjunctDemo/app/src/main/res/values-night/: themes.xml
testassets/android/ConjunctDemo/gradle/wrapper/: gradle-wrapper.properties
testassets/ios/ConjunctDemo/: .gitignore  conjunct-config.yaml
testassets/ios/ConjunctDemo/ConjunctDemo/: ConjunctDemo.h  IPFetcher.h  IPFetcher.m
testassets/ios/ConjunctDemo/ConjunctDemo.xcodeproj/: project.pbxproj
testassets/ios/ConjunctDemo/ConjunctDemo.xcodeproj/xcshareddata/xcschemes/: ConjunctDemo.xcscheme
testassets/unit/: example_config_1.yaml  hello.bc
util/: util.go
(+1 files in other folders)
